fixed footer not staying at the bottom on mobile, weird behaviour

--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -7,6 +7,10 @@
     padding-top: 66px;
     margin-top: auto;
 
+    @include mobile {
+        padding-top: 45px;
+    }
+
     .contentWrapper {
         display: flex;
         flex-direction: column;
